<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="387dp"
        android:layout_height="15dp"
        android:text="@string/tv_titulo"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="283dp"
        tools:layout_editor_absoluteY="6dp"
        android:text="@string/bt_guardar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_apellido"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nrotarjeta"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="141dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_mes"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_anho"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_codigo"
        tools:layout_editor_absoluteX="326dp"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Dirección"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="254dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_calle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="311dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_ciudad"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="375dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_estado"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="442dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_codigo"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="442dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|number"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>